# Aegis

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  basicinfo.docx  build_steps.md  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  dashboard_models.py  github_client.py  main.py  models.py  review_engine.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  styles.css
dashboard/src/components/: Shell.tsx
dashboard/src/lib/: api.ts  types.ts
pr-review-bot/: .env.example  .gitignore  Dockerfile  README.md
pr-review-bot/.github/workflows/: ci.yml
pr-review-bot/app/: __init__.py  main.py  review_engine.py
pr-review-bot/dashboard/: package-lock.json
pr-review-bot/dashboard/src/: styles.css
pr-review-bot/dashboard/src/lib/: api.ts
pr-review-bot/prompts/: code_review.txt
pr-review-bot/tests/: test_github_client.py
pr-review-bot/tests/fixtures/: sample_diff.txt
tests/: test_github_client.py  test_main.py  test_review_engine.py
